@@ -3,12 +3,16 @@ Initial Release:  Monday, Oct 12 2011
 Supported Presently
 
 Changelog for 1.3.27
-
 * Detect whether ledgersmb.conf exists during Makefile.PL run and create if
   not (Chris T)
 * Fixed prepare-company-database.sh clobbering the Apache configuration on
   every run (Chris T, 3595000)
 * Fixed error sorting recon search by account (Chris T, h/t Erik H, 3589473)
+* Fixed configure_apache.sh, read input, change of file name from 
+  ledgersmb-httpd.conf to ledgersmb-httpd.conf.template (Havard S)
+
+Chris T is Chris Travers
+Havard S is Havard Sorli
 
 Changelog for 1.3.26
 * Added db statistics post-upgrade and pre/post rebuild (Chris T, 3586113)
